# cppbackend

./: .gitignore  et HEAD --hard fdc1115
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  hotdog.h  ingredients.h
sprint1/problems/final_task/solution/: Dockerfile
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/map_json/solution/: Dockerfile
sprint1/problems/map_json/solution/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/radio/solution/: CMakeLists.txt  main.cpp
sprint1/problems/restaurant_multi_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main  main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/src/: tcp_client.cpp  tcp_server.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: game.cpp  game.h  gamesession.cpp  gamesession.h  http_server.cpp  json_loader.cpp  json_loader.h  logger.h  main.cpp  model.cpp  model.h  parse_command_line.h  players.cpp  players.h  request_handler.h  tagged.h  ticker.h  token.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/src/: game.cpp  game.h  json_loader.cpp  logger.h  main.cpp  model.h  players.h  request_handler.h
sprint2/problems/join_game/solution/src/: game.cpp  game.h  json_loader.h  model.cpp  players.cpp  players.h  request_handler.h  token.cpp
sprint2/problems/logger/solution/: Dockerfile  my_logger.h
sprint2/problems/logger/solution/src/: main.cpp  players.h
sprint2/problems/move_players/solution/src/: game.h  gamesession.h  json_loader.cpp  logger.h  main.cpp  model.cpp  model.h  parse_command_line.h  players.h  request_handler.h
sprint2/problems/server_logging/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/: Dockerfile
sprint2/problems/server_logging/solution/src/: http_server.h  logger.h  main.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/server_logging/src/: http_server.h  json_loader.h
sprint2/problems/static_content/solution/src/: game.cpp  game.h  main.cpp  request_handler.h  utest.cpp
sprint2/problems/time_control/solution/src/: game.cpp  game.h  json_loader.cpp  main.cpp  model.cpp  model.h  players.h  request_handler.h
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/find_return/solution/data/: config.json
sprint3/problems/find_return/solution/src/: boost_json.cpp  collision_detector.cpp  collision_detector.h  game.cpp  game.h  gamesession.cpp  gamesession.h  json_loader.cpp  json_map_loader.cpp  logger.h  model.cpp  model.h  players.h  request_handler.h
sprint3/problems/find_return/solution/tests/: collision-detector-tests.cpp
sprint3/problems/flamegraph/solution/: Dockerfile  shoot.py
sprint3/problems/gather/solution/: conanfile.txt
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/precode/src/: gamesession.h  http_server.h
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: gamesession.cpp  json_loader.h  model-tests.cpp
sprint3/problems/htmldecode/solution/: conanfile.txt
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/instrumentation/solution/: event2dot  report
sprint3/problems/load/solution/: ammo.stpd_si.json  ammo.txt  load.yaml
sprint3/problems/scores/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/scores/solution/data/: config.json
sprint3/problems/scores/solution/src/: application.h  collision_detector.cpp  collision_detector.h  game.cpp  game.h  gamesession.cpp  gamesession.h  http_server.h  json_loader.cpp  json_loader.h  logger.cpp  logger.h  main.cpp  model.cpp  model.h  players.cpp  request_handler.cpp  request_handler.h
sprint3/problems/scores/solution/tests/: collision-detector-tests.cpp  model-tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/static_lib/solution/src/: game.h  gamesession.cpp  gamesession.h  json_loader.cpp  json_loader.h  json_map_loader.cpp  main.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/tv/solution/: conanfile.txt
sprint3/problems/tv/solution/src/: controller.h  tv.h
sprint3/problems/tv/solution/tests/: catch_controller_tests.cpp  catch_tv_tests.cpp
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt  library.cpp  library.h  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/sql/: base.cpp  base.h  connectionpool.h  types.h  unitofwork.cpp  unitofwork.h  usecases.cpp  usecases.h
sprint4/problems/leave_game/solution/src/: application.h  collision_detector.h  game.cpp  game.h  gamesession.cpp  gamesession.h  http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  json_map_loader.h  main.cpp  model.cpp  model.h  players.cpp  players.h  request_handler.h  serialize.cpp  serialize.h  tagged.cpp  tagged.h  template.cpp  template.h
sprint4/problems/leave_game/solution/tests/: model-tests.cpp  serialize_tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
(+54 files in other folders)
